# karstos

src/: px4_msgs
src/karstos_control/: CMakeLists.txt  package.xml
src/karstos_control/src/: flight_controller.cpp  offboard_controller.cpp  pose_extractor.cpp  px4_tf_broadcaster.cpp  vision_pose_publisher.cpp
src/karstos_sim/: CMakeLists.txt  package.xml
src/karstos_sim/config/: slam.yaml
src/karstos_sim/launch/: karstos_bringup.launch.py  simulation.launch.py
src/karstos_sim/models/drone/: drone_model.sdf
src/karstos_sim/worlds/: simple_tunnel_02.sdf
